Ensure icon colour is correct on mobile

--- a/src/styles/partials/_baseStyles.scss
+++ b/src/styles/partials/_baseStyles.scss
@@ -73,4 +73,5 @@ textarea {
 
 .material-symbols-outlined {
   font-size: 3.2rem;
+  color: $high-emphasis-colour;
 }
